# esp32-c6-lp-core-freertos

./: .gitignore  .gitmodules  CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c6
main/: CMakeLists.txt  main.cpp
main/ulp/: CMakeLists.txt  lp_common.h  main.c
main/ulp/cmake/: ulp_tools.cmake
main/ulp/freertos/: CMakeLists.txt
main/ulp/freertos/config/: FreeRTOSConfig.h
main/ulp/freertos/ld/: lp_core_riscv.ld
main/ulp/freertos/libc/: abort.c  int64.c  string.c
main/ulp/freertos/lp_core/: lp_core_interrupt.c  start.S
main/ulp/freertos/port/: port.c  portASM.S  portContext.h  portmacro.h
